# mugee-engine

./: .gitignore  CMakeLists.txt
bgfx-imgui/: imgui_impl_bgfx.h
cmake/: source_files.cmake  source_files_gen.py  superbuild.cmake
shader/: f_simple.sc  v_simple.sc
src/: main.cpp
src/common/: file-ops.h  utils.cpp  utils.h
src/common/patterns/: singleton.h
src/game/: game_context.cpp  game_context.h  game_state_manager.cpp  game_state_manager.h  player.cpp  player.h
src/game/context/: player_context.cpp  player_context.h  render_context.cpp  render_context.h
src/game/objects/: block_3d.cpp  block_3d.h  object_factory.cpp  object_factory.h
src/game/objects/enum/: block_data.h
src/game/state/: playable_state.cpp  playable_state.h  setup_state.cpp  setup_state.h
src/game/state/abstract/: game_state.cpp  game_state.h
src/game/structs/: camera.cpp  camera.h
src/graphics/: block_3_d.cpp  block_3_d.h  texture.cpp  texture.h
src/graphics/enum/: block_data.h
src/graphics/objects/: block_3_d.cpp  block_3_d.h
src/graphics/rendering/: render_batch.cpp  render_batch.h  shaders.cpp  shaders.h
src/graphics/rendering/abstract/: renderable.h  renderable_object.cpp  renderable_object.h
src/graphics/structs/: cube.cpp  cube.h  pos_tex_vertex.cpp  pos_tex_vertex.h  texture_region.h
src/graphics/utils/: colors.cpp  colors.h  helper.cpp  helper.h
src/math/: vector_3.cpp  vector_3.h
src/world/: chunk.cpp  chunk.h  player.cpp  player.h
src/world/objects/: object_factory.cpp  object_factory.h
src/world/spatial_partitioning/: voxel_grid.cpp  voxel_grid.h
src/world/structs/: camera.cpp  camera.h
